[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2021"
license = "AGPL-3.0-only"
name = "jackady"
version = "0.1.3"

[dependencies]
blake2 = "0.10"
clap = {version = "4.0", features = ["derive"]}
env_logger = "0.10"
fs_extra = "1.2"
indicatif = "0.17"
log = "0.4"
mozdevice = "0.5"
rayon = "1.6"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots", "blocking", "rustls", "deflate", "gzip", "brotli"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
signal-hook = "0.3"
target = "2.0"
thiserror = "1.0"
toml = "0.5"
url = "2.3"
walkdir = "2.3"
zip = {version = "0.6", default-features = false, features = ["deflate"]}
